--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-5 mx-auto">
-          <h1>ENTER URL</h1>
+          <h1>ENTER THE URL</h1>
         </div>
       </div>
       <br>
